--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,11 +3,34 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../lib/bootstrap.min.css">
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
         <script src="../lib/jquery-3.2.1.slim.min.js"></script>
+        <script src="../lib/bootstrap.min.js"></script>
         <script src="popup.js"></script>
     </head>
-    <body class="panel">
-        <p id="pagetitle">Hello!</p>
-    </body>
+  <body>
+    <div class="card extension-card" id="extension-card">
+      <h5 class="card-header">Tracking Transparency</h5>
+      <!--<div class="card-block">-->
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <p class="tt_text" id="tt_hook"> <em id='tt_hook_tracker'></em> <span>knows about your visit to this site, and also about your visit to </span><strong id='tt_hook_origin_title'></strong> (<span id='tt_hook_origin_domain'></span>) on <span id='tt_hook_origin_time'></span></p>
+            <button type="button" class="btn show-more-btn" data-toggle="collapse" data-target="#moreExamples" aria-expanded="false" aria-controls="moreExamples">Show me more about what they know</button>
+        </li>
+      <div class="collapse" id="moreExamples">
+      <div>
+        <li class="list-group-item">
+            <p><strong>DoubleClick</strong> and 2 other trackers also know about your activity at <em>nytimes.com</em></p>
+        </li>
+        <li class="list-group-item">
+            <p><strong>TripleClick</strong> also knows about your activity at <em>fivethirtyeight.com</em> and 4 other sites</p>
+        </li>
+        <li class="list-group-item">
+          <button type="button" class="btn btn-primary">Learn more</button>
+      </div>
+    </div>
+    <div id="status"></div>
+    <img id="image-result" hidden>
+  </body>
 </html>
