--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,8 +15,9 @@
       <!--<div class="card-block">-->
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-          <p class="tt_text" id="tt_hook"> <em id='tt_hook_tracker'></em> <span>knows about your visit to this site, and also about your visit to </span><strong id='tt_hook_origin_title'></strong> (<span id='tt_hook_origin_domain'></span>) on <span id='tt_hook_origin_time'></span></p>
-            <button type="button" class="btn show-more-btn" data-toggle="collapse" data-target="#moreExamples" aria-expanded="false" aria-controls="moreExamples">Show me more about what they know</button>
+          <!--<p class="tt_text" id="tt_hook"> <em id='tt_hook_tracker'></em> <span>knows about your visit to this site, and also about your visit to </span><strong id='tt_hook_origin_title'></strong> (<span id='tt_hook_origin_domain'></span>) on <span id='tt_hook_origin_time'></span></p>-->
+          <p class="tt_text" id="tt_hook">You are on <strong id='pagetitle'></strong>.</p>
+          <button type="button" class="btn show-more-btn" data-toggle="collapse" data-target="#moreExamples" aria-expanded="false" aria-controls="moreExamples">Show me more about what they know</button>
         </li>
       <div class="collapse" id="moreExamples">
       <div>
