--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="../lib/bootstrap.min.css">
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
-        <script src="../lib/jquery-3.2.1.slim.min.js"></script>
+        <script src="../lib/jquery-3.2.1.min.js"></script>
         <script src="../lib/bootstrap.min.js"></script>
         <script src="popup.js"></script>
     </head>
