show inference for current page in popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -16,7 +16,7 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
           <!--<p class="tt_text" id="tt_hook"> <em id='tt_hook_tracker'></em> <span>knows about your visit to this site, and also about your visit to </span><strong id='tt_hook_origin_title'></strong> (<span id='tt_hook_origin_domain'></span>) on <span id='tt_hook_origin_time'></span></p>-->
-          <p class="tt_text" id="tt_hook">You are on <strong id='pagetitle'></strong>.</p>
+          <p class="tt_text" id="tt_hook">We think that <strong id='pagetitle'></strong> is about <strong id='inference'></strong>.</p>
           <button type="button" class="btn show-more-btn" data-toggle="collapse" data-target="#moreExamples" aria-expanded="false" aria-controls="moreExamples">Show me more about what they know</button>
         </li>
       <div class="collapse" id="moreExamples">
