--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -7,7 +7,7 @@
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
         <script src="../lib/jquery-3.2.1.min.js"></script>
         <script src="../lib/bootstrap.min.js"></script>
-        <script src="popup.js"></script>
+        <script src="infopage.js"></script>
     </head>
   <body>
     <div class="card extension-card" id="extension-card">
@@ -18,8 +18,19 @@
             <!--<p class="tt_text" id="tt_hook"> <em id='tt_hook_tracker'></em> <span>knows about your visit to this site, and also about your visit to </span><strong id='tt_hook_origin_title'></strong> (<span id='tt_hook_origin_domain'></span>) on <span id='tt_hook_origin_time'></span></p>-->
             <!--<p class="tt_text" id="tt_hook">We think that <strong id='pagetitle'></strong> is about <strong id='inference'></strong>.</p>-->
             <p class="tt_text" id="tt_hook"><strong id='mosttrackername'></strong> knows about your activity on this page and <strong id='mosttrackercount'></strong> others. We think it knows that you have visited pages related to <strong id='mostrackerinferences'></strong>.</p>
-            <button type="button" class="btn show-more-btn">Show me more about what they know</button>
+            <button type="button" class="btn show-more-btn" data-toggle="collapse" data-target="#moreExamples" aria-expanded="false" aria-controls="moreExamples">Show me more about what they know</button>
         </li>
+        <div class="collapse" id="moreExamples">
+        <div>
+        <li class="list-group-item">
+            <p><strong>DoubleClick</strong> and 2 other trackers also know about your activity at <em>nytimes.com</em></p>
+        </li>
+        <li class="list-group-item">
+            <p><strong>TripleClick</strong> also knows about your activity at <em>fivethirtyeight.com</em> and 4 other sites</p>
+        </li>
+        <li class="list-group-item">
+            <button type="button" class="btn btn-primary">Learn more</button>
+        </div>
     </div>
     <div id="status"></div>
     <img id="image-result" hidden>
