--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -7,6 +7,7 @@
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
         <script src="../lib/jquery-3.2.1.min.js"></script>
         <script src="../lib/bootstrap.min.js"></script>
+        <script src="../lib/parseUri.js"></script>
         <script src="popup.js"></script>
     </head>
   <body>
