add logo to popup

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -12,7 +12,9 @@
     </head>
   <body>
     <div class="card extension-card" id="extension-card">
-        <h5 class="card-header">Tracking Transparency</h5>
+        <h5 class="card-header">
+            <img src="../icons/super.svg" alt="UChicago SUPERgroup" height="26px" width="26px" style="margin-right: 10px"/>Tracking Transparency
+        </h5>
         <!--<div class="card-block">-->
         <ul class="list-group list-group-flush">
         <li class="list-group-item">
