--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -10,28 +10,70 @@
         <script src="infopage.js"></script>
     </head>
   <body>
-    <div class="card extension-card" id="extension-card">
-        <h5 class="card-header">Tracking Transparency</h5>
-        <!--<div class="card-block">-->
-        <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-            <!--<p class="tt_text" id="tt_hook"> <em id='tt_hook_tracker'></em> <span>knows about your visit to this site, and also about your visit to </span><strong id='tt_hook_origin_title'></strong> (<span id='tt_hook_origin_domain'></span>) on <span id='tt_hook_origin_time'></span></p>-->
-            <!--<p class="tt_text" id="tt_hook">We think that <strong id='pagetitle'></strong> is about <strong id='inference'></strong>.</p>-->
-            <p class="tt_text" id="tt_hook"><strong id='mosttrackername'></strong> knows about your activity on this page and <strong id='mosttrackercount'></strong> others. We think it knows that you have visited pages related to <strong id='mostrackerinferences'></strong>.</p>
-            <button type="button" class="btn show-more-btn" data-toggle="collapse" data-target="#moreExamples" aria-expanded="false" aria-controls="moreExamples">Show me more about what they know</button>
-        </li>
-        <div class="collapse" id="moreExamples">
-        <div>
-        <li class="list-group-item">
-            <p><strong>DoubleClick</strong> and 2 other trackers also know about your activity at <em>nytimes.com</em></p>
-        </li>
-        <li class="list-group-item">
-            <p><strong>TripleClick</strong> also knows about your activity at <em>fivethirtyeight.com</em> and 4 other sites</p>
-        </li>
-        <li class="list-group-item">
-            <button type="button" class="btn btn-primary">Learn more</button>
+
+
+
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-sm-3 col-md-2 d-none d-sm-block sidebar">
+        <ul class="nav nav-tabs flex-column">
+            <div class="nav-title">Transparency</div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Who is tracking me?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">What might the trackers know?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">What might companies have inferred?</a>
+          </li>
+        </ul>
+
+        <ul class="nav nav-tabs flex-column">
+          <div class="nav-title">Web Tracking</div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Why am I being tracked?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">What can the trackers do?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">What can I do?</a>
+          </li>
+        </ul>
+
+        <ul class="nav nav-tabs flex-column">
+          <div class="nav-title">About the Extension</div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">How do I use this extension?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">What is the SUPERgroup?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Where can I learn more?</a>
+          </li>
+        </ul>
+      </nav>
+
+      <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+        <h1>Tracking Transparency Dashboard</h1>
+        <div class="card">
+          <div class="card-body">
+            <img src="../icons/super.svg" hspace="300">
+          </div>
         </div>
+
+      </main>
     </div>
+  </div>
+
+
+
+
+
+
+
     <div id="status"></div>
     <img id="image-result" hidden>
   </body>
