testing bug with clicking links

--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -17,28 +17,30 @@
     <div class="row">
       <nav class="col-sm-3 col-md-2 d-none d-sm-block sidebar">
         <ul class="nav nav-tabs flex-column">
-            <div class="nav-title">Transparency</div>
+            <div class="nav-title">Tracking</div>
           <li class="nav-item">
-            <a class="nav-link" href="#">Who is tracking me?</a>
+            <div class="nav-link" id="who-is-tracking">
+              Who is tracking me?
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Where are the trackers?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">How are they tracking me?</a>
+          </li>
+        </ul>
+
+        <ul class="nav nav-tabs flex-column">
+          <div class="nav-title">Inferencing</div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Why am I being tracked?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">What might the trackers know?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">What might companies have inferred?</a>
-          </li>
-        </ul>
-
-        <ul class="nav nav-tabs flex-column">
-          <div class="nav-title">Web Tracking</div>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Why am I being tracked?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">What can the trackers do?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">What can I do?</a>
           </li>
         </ul>
 
