--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="../lib/bootstrap.min.css">
+        <link rel="stylesheet" href="style.css">
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
         <script src="../lib/jquery-3.2.1.min.js"></script>
+        <script src="../lib/popper.min.js"></script>
         <script src="../lib/bootstrap.min.js"></script>
         <script src="infopage.js"></script>
     </head>
@@ -19,41 +20,38 @@
         <ul class="nav nav-tabs flex-column">
             <div class="nav-title">Tracking</div>
           <li class="nav-item">
-            <div class="nav-link" id="who-is-tracking">
+            <a class="nav-link" data-toggle="tab" href="#who-is-tracking" role="tab" id="myTab">
               Who is tracking me?
-            </div>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Where are the trackers?</a>
+            <a class="nav-link" data-toggle="tab" href="#where-are-they" role="tab">
+              Where are the trackers?
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">How are they tracking me?</a>
+            <a class="nav-link" data-toggle="tab" href="#how-are-they" role="tab">
+              How are they tracking me?
+            </a>
           </li>
-        </ul>
 
-        <ul class="nav nav-tabs flex-column">
           <div class="nav-title">Inferencing</div>
           <li class="nav-item">
-            <a class="nav-link" href="#">Why am I being tracked?</a>
+            <a class="nav-link" data-toggle="tab" href="#what-inferences" role="tab">
+              What might companies have inferred?
+            </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">What might the trackers know?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">What might companies have inferred?</a>
-          </li>
-        </ul>
 
-        <ul class="nav nav-tabs flex-column">
-          <div class="nav-title">About the Extension</div>
+          <div class="nav-title">About</div>
           <li class="nav-item">
-            <a class="nav-link" href="#">How do I use this extension?</a>
+            <a class="nav-link" data-toggle="tab" href="#how-to-use" role="tab">
+              How do I use this extension?
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">What is the SUPERgroup?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Where can I learn more?</a>
+            <a class="nav-link" data-toggle="tab" href="#supergroup" role="tab">
+              What is the SUPERgroup?
+            </a>
           </li>
         </ul>
       </nav>
@@ -61,9 +59,28 @@
       <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
         <h1>Tracking Transparency Dashboard</h1>
         <div class="card">
-          <div class="card-body">
-            <img src="../icons/super.svg" hspace="300">
-          </div>
+            <div class="tab-content">
+              <div class="tab-pane fade show active" id="home" role="tabpanel">
+                <img src="../icons/super.svg" hspace="300">
+              </div>
+
+              <div class="tab-pane fade" id="who-is-tracking" role="tabpanel">
+                <h3 class="card-header">Who is tracking me?</h3>
+                <div class="card-block">
+                  <h6 class="card-title">These are your most frequently encountered trackers</h6>
+                    <ul class="list-group list-group-flush">
+                      <div id="frequentTrackerList">
+                      </div>
+                    </ul>
+                </div>
+              </div>
+
+              <div class="tab-pane fade" id="where-are-they" role="tabpanel">where they are</div>
+              <div class="tab-pane fade" id="how-are-they" role="tabpanel">how they track</div>
+              <div class="tab-pane fade" id="what-inferences" role="tabpanel">They make inferences</div>
+              <div class="tab-pane fade" id="how-to-use" role="tabpanel">use</div>
+              <div class="tab-pane fade" id="supergroup" role="tabpanel">we are super</div>
+            </div>
         </div>
 
       </main>
