--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -3,8 +3,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../lib/bootstrap.min.css">
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
-        <script src="../dist/popup.js"></script>
+        <script src="../lib/jquery-3.2.1.min.js"></script>
+        <script src="../lib/bootstrap.min.js"></script>
+        <script src="../lib/parseUri.js"></script>
+        <script src="popup.js"></script>
     </head>
   <body>
     <div class="card extension-card" id="extension-card">
