accordion style tracker page but its still ugly

--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -68,10 +68,11 @@
                 <h3 class="card-header">Who is tracking me?</h3>
                 <div class="card-block">
                   <h6 class="card-title">These are your most frequently encountered trackers</h6>
-                    <ul class="list-group list-group-flush">
-                      <div id="frequentTrackerList">
-                      </div>
-                    </ul>
+
+                    <div id="accordion" role="tablist" aria-multiselectable="true">
+                      <div id="frequentTrackerList2"></div>
+                    </div>
+
                 </div>
               </div>
 
