changed link styles and added supergroup page

--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -60,6 +60,7 @@
         <h1>Tracking Transparency Dashboard</h1>
         <div class="card">
             <div class="tab-content">
+              
               <div class="tab-pane fade show active" id="home" role="tabpanel">
                 <img src="../icons/super.svg" hspace="300">
               </div>
@@ -68,19 +69,37 @@
                 <h3 class="card-header">Who is tracking me?</h3>
                 <div class="card-block">
                   <h6 class="card-title">These are your most frequently encountered trackers</h6>
-
                     <div id="accordion" role="tablist" aria-multiselectable="true">
                       <div id="frequentTrackerList2"></div>
                     </div>
-
                 </div>
               </div>
 
-              <div class="tab-pane fade" id="where-are-they" role="tabpanel">where they are</div>
+              <div class="tab-pane fade" id="where-are-they" role="tabpanel">
+                where they are
+              </div>
+
               <div class="tab-pane fade" id="how-are-they" role="tabpanel">how they track</div>
               <div class="tab-pane fade" id="what-inferences" role="tabpanel">They make inferences</div>
               <div class="tab-pane fade" id="how-to-use" role="tabpanel">use</div>
-              <div class="tab-pane fade" id="supergroup" role="tabpanel">we are super</div>
+
+              <div class="tab-pane fade" id="supergroup" role="tabpanel">
+                <h3 class="card-header"><a href="https://super.cs.uchicago.edu/">SUPERgroup</a></h3>
+                <div class="card-block">
+                  <p>
+                    The SUPERgroup (Security, Usability, &amp; Privacy Education &amp; Research group)
+                     is an interdisciplinary research collective comprising over 20 members at the University
+                     of Chicago. We focus on the intersection between computer security, privacy, and
+                     usability, as evidenced by our recent publications. Our current projects focus on using
+                     data-driven methods to improve online security and privacy, as well as improving
+                     interaction aspects of both the Internet of Things and interactive machine learning
+                     systems.</p>
+                  <p>The SUPERgroup is led by Blase Ur, a Neubauer Family Assistant Professor
+                       at the University of Chicago.</p>
+                  <p>This extension was created by the SUPERgroup Tracking Transparency team of Euirim Choi,
+                    Claire Dolin, Aaron Goldman, Chang Min Hahn, Sixiong Shan, and Ben Weinshel. </p>
+                </div>
+              </div>
             </div>
         </div>
 
