added placeholder questions

--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -60,7 +60,7 @@
         <h1>Tracking Transparency Dashboard</h1>
         <div class="card">
             <div class="tab-content">
-              
+
               <div class="tab-pane fade show active" id="home" role="tabpanel">
                 <img src="../icons/super.svg" hspace="300">
               </div>
@@ -76,15 +76,21 @@
               </div>
 
               <div class="tab-pane fade" id="where-are-they" role="tabpanel">
-                where they are
+                <h3 class="card-header">Who are the trackers?</h3>
               </div>
 
-              <div class="tab-pane fade" id="how-are-they" role="tabpanel">how they track</div>
-              <div class="tab-pane fade" id="what-inferences" role="tabpanel">They make inferences</div>
-              <div class="tab-pane fade" id="how-to-use" role="tabpanel">use</div>
+              <div class="tab-pane fade" id="how-are-they" role="tabpanel">
+                <h3 class="card-header">How are they tracking me?</h3>
+              </div>
+              <div class="tab-pane fade" id="what-inferences" role="tabpanel">
+                <h3 class="card-header">What might companies have inferred?</h3>
+              </div>
+              <div class="tab-pane fade" id="how-to-use" role="tabpanel">
+                <h3 class="card-header">How do I use this extension?</h3>
+              </div>
 
               <div class="tab-pane fade" id="supergroup" role="tabpanel">
-                <h3 class="card-header"><a href="https://super.cs.uchicago.edu/">SUPERgroup</a></h3>
+                <h3 class="card-header">What is the <a href="https://super.cs.uchicago.edu/">SUPERgroup</a>?</h3>
                 <div class="card-block">
                   <p>
                     The SUPERgroup (Security, Usability, &amp; Privacy Education &amp; Research group)
