--- a/extension/options/options.html
+++ b/extension/options/options.html
@@ -12,6 +12,8 @@
         <p><label>Popup Condition<input type="text" id="popupCondition" ></label></p>
         <p><label>Infopage Condition<input type="text" id="infopageCondition" ></label></p>
         <p><label>Inferencing Condition<input type="text" id="inferencingCondition" ></label></p>
+        <p><label>Overlay Condition<input type="text" id="overlayCondition" ></label></p>
+
         <p><button type="submit">Save</button></p>
     </form>
 
