--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -58,38 +58,65 @@
 
       <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
         <h1>Tracking Transparency Dashboard</h1>
-        <div class="card">
-            <div class="tab-content">
+          <div class="tab-content">
 
-              <div class="tab-pane fade show active" id="home" role="tabpanel">
+            <div class="tab-pane fade show active" id="home" role="tabpanel">
+              <div class="card">
                 <img src="../icons/super.svg" hspace="300">
               </div>
+            </div>
 
-              <div class="tab-pane fade" id="who-is-tracking" role="tabpanel">
+            <div class="tab-pane fade" id="who-is-tracking" role="tabpanel">
+              <div class="card">
                 <h3 class="card-header">Who is tracking me?</h3>
                 <div class="card-block">
                   <h6 class="card-title">These are your most frequently encountered trackers</h6>
                     <div id="accordion" role="tablist" aria-multiselectable="true">
-                      <div id="frequentTrackerList2"></div>
+                      <div id="frequentTrackerList"></div>
                     </div>
                 </div>
               </div>
+            </div>
 
-              <div class="tab-pane fade" id="where-are-they" role="tabpanel">
-                <h3 class="card-header">Who are the trackers?</h3>
+            <div class="tab-pane fade" id="where-are-they" role="tabpanel">
+              <div class="card">
+                <h3 class="card-header">Where are the trackers?</h3>
               </div>
+            </div>
 
-              <div class="tab-pane fade" id="how-are-they" role="tabpanel">
+            <div class="tab-pane fade" id="how-are-they" role="tabpanel">
+              <div class="card">
                 <h3 class="card-header">How are they tracking me?</h3>
+                <div class="card-block">
+                </div>
               </div>
-              <div class="tab-pane fade" id="what-inferences" role="tabpanel">
-                <h3 class="card-header">What might companies have inferred?</h3>
-              </div>
-              <div class="tab-pane fade" id="how-to-use" role="tabpanel">
-                <h3 class="card-header">How do I use this extension?</h3>
-              </div>
+            </div>
 
-              <div class="tab-pane fade" id="supergroup" role="tabpanel">
+            <div class="tab-pane fade" id="what-inferences" role="tabpanel">
+              <div class="card">
+                <h3 class="card-header">What might companies have inferred?</h3>
+                <div class="card-block">
+                  <h6 class="card-title">These are your most frequently encountered trackers</h6>
+                  <div id="accordion" role="tablist" aria-multiselectable="true">
+                    <div id="frequentTrackerListInferencing"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="tab-pane fade" id="how-to-use" role="tabpanel">
+              <div class="card">
+                <h3 class="card-header">How do I use this extension?</h3>
+                <div class="card-block">
+                  <p>Just browse the internet as you do normally and come back to your <b>Tracking Transparency
+                    Dashboard</b> to see where you've encountered trackers and learn more about how they
+                    could affect your browsing experience.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="tab-pane fade" id="supergroup" role="tabpanel">
+              <div class="card">
                 <h3 class="card-header">What is the <a href="https://super.cs.uchicago.edu/">SUPERgroup</a>?</h3>
                 <div class="card-block">
                   <p>
@@ -107,7 +134,7 @@
                 </div>
               </div>
             </div>
-        </div>
+          </div>
 
       </main>
     </div>
