--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -20,14 +20,16 @@
         <li class="list-group-item">
             <!--<p class="tt_text" id="tt_hook"> <em id='tt_hook_tracker'></em> <span>knows about your visit to this site, and also about your visit to </span><strong id='tt_hook_origin_title'></strong> (<span id='tt_hook_origin_domain'></span>) on <span id='tt_hook_origin_time'></span></p>-->
             <!--<p class="tt_text" id="tt_hook">We think that <strong id='pagetitle'></strong> is about <strong id='inference'></strong>.</p>-->
-            <p class="tt_text" id="tt_hook"><strong id='mosttrackername'></strong> knows about your activity on this page and <strong id='mosttrackercount'></strong> others. It has likely inferred that you are interested in <strong id='mostrackerinferences'></strong>.</p>
+            <p class="tt_text" id="tt_hook"><strong id='mosttrackername'></strong> knows about your activity on the page you last visited and <strong id='mosttrackercount'></strong> others.</p>
         </li>
         <li class="list-group-item">
-            <p><strong>AdCompany2</strong> also knows about your activity on this page and <strong <em>GenericURL.com</em> </strong>.</p>
+            <p><strong>AdCompany2</strong> also knows about your activity on this page and <strong <em>GenericURL.com</em></strong>.</p>
         </li>
         <li class="list-group-item">
-            <p><strong>AdCompany3</strong> also knows about your activity on this page and <strong <em>GenericURL.com</em> </strong>.</p>
+            <p><strong>AdCompany3</strong> also knows about your activity on this page and <strong <em>GenericURL.com</em></strong>.</p>
         </li>
+        <li class="list-group-item">
+            <p>These companies have likely inferred that you are interested in <strong id='mostrackerinferences'></strong>.</p>
         <li class="list-group-item">
             <button type="button" class="btn show-more-btn">Show me more</button>
     </div>
