--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -23,10 +23,10 @@
             <p class="tt_text" id="tt_hook"><strong id='mosttrackername'></strong> knows about your activity on the page you last visited and <strong id='mosttrackercount'></strong> others.</p>
         </li>
         <li class="list-group-item">
-            <p><strong>AdCompany2</strong> also knows about your activity on this page and <strong <em>GenericURL.com</em></strong>.</p>
+            <p><strong>AdCompany2</strong> also knows about your activity on this page and <strong id='mosttrackercount'></strong>.</p>
         </li>
         <li class="list-group-item">
-            <p><strong>AdCompany3</strong> also knows about your activity on this page and <strong <em>GenericURL.com</em></strong>.</p>
+            <p><strong>AdCompany3</strong> also knows about your activity on this page and <strong id='mosttrackercount'></strong>.</p>
         </li>
         <li class="list-group-item">
             <p>These companies have likely inferred that you are interested in <strong id='mostrackerinferences'></strong>.</p>
