some more queries

--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -22,13 +22,15 @@
             <option value="get_trackers_by_domain">get_trackers_by_domain</option>
             <option value="get_trackers_by_inference_count">get_trackers_by_inference_count</option>
             <option value="get_domains_by_tracker">get_domains_by_tracker</option>
+            <option value="get_pages_by_tracker_and_domain">get_pages_by_tracker_and_domain</option>
+            <option value="get_pages_by_tracker_and_inference">get_pages_by_tracker_and_inference</option>
             <option value="get_tracker_with_inferences_by_domain">get_tracker_with_inferences_by_domain</option>
             <option value="get_info_about_tracker">get_info_about_tracker</option>
         </select></label>
 
-        <p><label>domain<input type="text" id="domain" value="nytimes.com"></label></p>
+        <p><label>domain<input type="text" id="domain" value="www.nytimes.com"></label></p>
         <p><label>tracker<input type="text" id="tracker" value="Google"></label></p>
-        <p><label>inference<input type="text" id="inference" value="News"></label></p>
+        <p><label>inference<input type="text" id="inference" value="People & Society"></label></p>
         <br>
         <p><label>count<input type="number" id="count"  value="5"></label></p>
         <p><label>inferenceCount<input type="number" id="inferenceCount" value="5"></label></p>
