--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -26,12 +26,12 @@
             <option value="get_pages_by_tracker_and_inference">get_pages_by_tracker_and_inference</option>
             <option value="get_tracker_with_inferences_by_domain">get_tracker_with_inferences_by_domain</option>
             <option value="get_info_about_tracker">get_info_about_tracker</option>
+            <option value="get_domains_by_tracker_count">get_domains_by_tracker_count</option>
         </select></label>
 
         <p><label>domain<input type="text" id="domain" value="www.nytimes.com"></label></p>
         <p><label>tracker<input type="text" id="tracker" value="Google"></label></p>
         <p><label>inference<input type="text" id="inference" value="People & Society"></label></p>
-        <br>
         <p><label>count<input type="number" id="count"  value="5"></label></p>
         <p><label>inferenceCount<input type="number" id="inferenceCount" value="5"></label></p>
         <p><label>pageCount<input type="number" id="pageCount" value="5"></label></p>
