--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -9,16 +9,13 @@
         <script src="../lib/popper.min.js"></script>
         <script src="../lib/bootstrap.min.js"></script>
         <script src="infopage.js"></script>
-
     </head>
     <body>
       <div class="container-fluid">
         <div class="row">
           <nav class="col-sm-3 col-md-2 d-none d-sm-block sidebar">
             <ul class="nav nav-tabs flex-column">
-              <div class="nav-side-menu">
-                <div class="menu-list">
-
+              <div style="text-align:center;">
                 <img src="../icons/super.svg" width="100" align="center">
               </div>
               <br>
