updated supergroup page. changed navigation options.

--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -19,10 +19,14 @@
                 <img src="../icons/super.svg" width="100" align="center">
               </div>
               <br>
+              <!-- These navigation options are TEMPORARY. We are using them to organize the
+                  different visualizations and pages that we are considering using in the
+                  final extension. Don't fret over the exact options because they are really
+                  just to organize our different ideas.-->
               <div class="nav-title">Tracking</div>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#who-is-tracking" role="tab" id="myTab">
-                  Who is tracking me?
+                  Who are the trackers/most frequently encountered trackers?
                 </a>
               </li>
               <li class="nav-item">
@@ -39,19 +43,15 @@
               <div class="nav-title">Inferencing</div>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#what-inferences" role="tab">
-                  What might companies have inferred?
+                  What might my most frequently encountered trackers have inferred about
+                  my interests?
                 </a>
               </li>
 
-              <div class="nav-title">About</div>
-              <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#how-to-use" role="tab">
-                  How do I use this extension?
-                </a>
-              </li>
+              <div class="nav-title">About/Miscellaneous</div>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#supergroup" role="tab">
-                  What is the SUPERgroup?
+                  About the Extension
                 </a>
               </li>
             </ul>
@@ -150,33 +150,15 @@
                   </div>
                 </div>
 
-              <div class="tab-pane fade" id="how-to-use" role="tabpanel">
-                  <div class="card">
-                    <h3 class="card-header">How do I use this extension?</h3>
-                    <div class="card-block">
-                      <p>Just browse the internet as you do normally and come back to your <b>Tracking Transparency
-                        Dashboard</b> to see where you've encountered trackers and learn more about how they
-                        could affect your browsing experience.</p>
-                    </div>
-                  </div>
-                </div>
-
               <div class="tab-pane fade" id="supergroup" role="tabpanel">
                   <div class="card">
-                    <h3 class="card-header">What is the <a href="https://super.cs.uchicago.edu/">SUPERgroup</a>?</h3>
+                    <h3 class="card-header">About the Extension</h3>
                     <div class="card-block">
-                      <p>
-                        The SUPERgroup (Security, Usability, &amp; Privacy Education &amp; Research group)
-                         is an interdisciplinary research collective comprising over 20 members at the University
-                         of Chicago. We focus on the intersection between computer security, privacy, and
-                         usability, as evidenced by our recent publications. Our current projects focus on using
-                         data-driven methods to improve online security and privacy, as well as improving
-                         interaction aspects of both the Internet of Things and interactive machine learning
-                         systems.</p>
-                      <p>The SUPERgroup is led by Blase Ur, a Neubauer Family Assistant Professor
-                           at the University of Chicago.</p>
-                      <p>This extension was created by the SUPERgroup Tracking Transparency team of Euirim Choi,
+                      <p>The Tracking Transparency extension was built at the University of Chicago by Euirim Choi,
                         Claire Dolin, Aaron Goldman, Chang Min Hahn, Sixiong Shan, and Ben Weinshel. </p>
+                      <p>We are led by Blase Ur, an assistant professor at the University of Chicago. We also work
+                        alongside our external collaborators, Michelle Mazurek, an assistant professor at the
+                        University of Maryland and Lorrie Cranor, a professor at Carnegie Mellon University. </p>
                       <img src="../icons/super.svg" hspace="300">
                     </div>
                   </div>
