--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -108,7 +108,7 @@
                       Keeping these buttons as an example of how to use and style buttons
                       <button type="button" class="btn btn-block btn-primary"
                         data-toggle="collapse" data-target="#who-is-tracking-accordion">
-                        See your <b><span class="numberOfFrequentTrackers"></span></b> most 
+                        See your <b><span class="numberOfFrequentTrackers"></span></b> most
                         <b>frequently</b> encountered trackers
                       </button><br>
                       <div class="collapse" id="who-is-tracking-accordion" role="tablist">
@@ -143,7 +143,9 @@
 
               <div class="tab-pane fade" id="what-inferences" role="tabpanel">
                   <div class="card">
-                    <h3 class="card-header">What might companies have inferred?</h3>
+                    <h3 class="card-header">What might my most frequently
+                      encountered trackers have inferred about
+                    my interests?</h3>
                     <div class="card-block">
                       <h6 class="card-title">These are your most frequently encountered trackers</h6>
                       <div id="what-inferences-accordion" role="tablist">
