rewriting stuff with a better understanding of js so others may edit

--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -25,8 +25,8 @@
                   just to organize our different ideas.-->
               <div class="nav-title">Tracking</div>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#who-is-tracking" role="tab" id="myTab">
-                  Who are the trackers/most frequently encountered trackers?
+                <a class="nav-link" data-toggle="tab" href="#who-is-tracking" role="tab">
+                  Who are the trackers?
                 </a>
               </li>
               <li class="nav-item">
@@ -43,15 +43,15 @@
               <div class="nav-title">Inferencing</div>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#what-inferences" role="tab">
-                  What might my most frequently encountered trackers have inferred about
+                  What might they have inferred about
                   my interests?
                 </a>
               </li>
 
-              <div class="nav-title">About/Miscellaneous</div>
+              <div class="nav-title">About/Misc.</div>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#supergroup" role="tab">
-                  About the Extension
+                  About the extension
                 </a>
               </li>
             </ul>
@@ -99,13 +99,15 @@
                         </div>
                       </div>
                     </section>
+                    <section class="row text-center placeholders">
+                    </section>
                 </div>
 
               <div class="tab-pane fade" id="who-is-tracking" role="tabpanel">
                   <div class="card">
                     <h3 class="card-header">Who is tracking me?</h3>
                     <div class="card-block">
-                      Keeping these buttons as an example of how to use and style buttons
+                      <!--Keeping these buttons as an example of how to use and style buttons -->
                       <button type="button" class="btn btn-block btn-primary"
                         data-toggle="collapse" data-target="#who-is-tracking-accordion">
                         See your <b><span class="numberOfFrequentTrackers"></span></b> most
@@ -144,8 +146,7 @@
               <div class="tab-pane fade" id="what-inferences" role="tabpanel">
                   <div class="card">
                     <h3 class="card-header">What might my most frequently
-                      encountered trackers have inferred about
-                    my interests?</h3>
+                      encountered trackers have inferred about my interests?</h3>
                     <div class="card-block">
                       <h6 class="card-title">These are your most frequently encountered trackers</h6>
                       <div id="what-inferences-accordion" role="tablist">
@@ -157,13 +158,38 @@
 
               <div class="tab-pane fade" id="supergroup" role="tabpanel">
                   <div class="card">
-                    <h3 class="card-header">About the Extension</h3>
+                    <h3 class="card-header">How it works</h3>
+                    <div class="card-block">
+                      <p>With this extension, we are trying to bring you more transparency about the world of
+                      online tracking, analytics, and advertising. We "track the trackers" by looking for trackers
+                      on all of the pages you visit while the extension is running. The extension keeps track of
+                      where and when you encountered these trackers. All of this information is used to show you
+                      personalized examples of how you interact with trackers in your normal activity.</p>
+                      <p> insert: how we know what trackers are</p>
+                      <p> insert: how we make inferences</p>
+                      <p> insert: limits of our approach</p>
+                      <p> insert: how it compares to other extensions- could be different approach</p>
+                    </div>
+                  </div>
+                  <br>
+                  <div class="card">
+                    <h3 class="card-header">Your privacy</h3>
+                    <div class="card-block">
+                      <p>To show you the data that other companies could gather about your browsing behavior, our
+                      extension also needs to log your behavior and page visits. All of your data is stored in a
+                      local database on your device and so nobody, not even our team of researchers, has access to
+                      your information. Your data stays on your computer and is never sent to another server.</p>
+                    </div>
+                  </div>
+                  <br>
+                  <div class="card">
+                    <h3 class="card-header">Our team</h3>
                     <div class="card-block">
                       <p>The Tracking Transparency extension was built at the University of Chicago by Euirim Choi,
-                        Claire Dolin, Aaron Goldman, Chang Min Hahn, Sixiong Shan, and Ben Weinshel. </p>
-                      <p>We are led by Blase Ur, an assistant professor at the University of Chicago. We also work
-                        alongside our external collaborators, Michelle Mazurek, an assistant professor at the
-                        University of Maryland and Lorrie Cranor, a professor at Carnegie Mellon University. </p>
+                        Claire Dolin, Aaron Goldman, Chang Min Hahn, Sixiong Shan, and Ben Weinshel. We are led by
+                         Blase Ur, an assistant professor at the University of Chicago.</p>
+                      <p>We also work alongside our external collaborators Michelle Mazurek, an assistant professor
+                         at the University of Maryland, and Lorrie Cranor, a professor at Carnegie Mellon University. </p>
                       <img src="../icons/super.svg" hspace="300">
                     </div>
                   </div>
