add number of times you've seen a tracker

--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -51,7 +51,7 @@
               <div class="nav-title">About/Misc.</div>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#supergroup" role="tab">
-                  About the extension
+                  About
                 </a>
               </li>
             </ul>
